fix: gradle improve notification